--- a/4-Serving-HTML-Pages/views/404.html
+++ b/4-Serving-HTML-Pages/views/404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>404 | Page Not Found</title>
+    <title>Page Not Found</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 
@@ -13,18 +13,12 @@
     <header class="main-header">
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
-                <li class="main-header__item">
-                    <a class="active" href="/">Shop</a>
-                </li>
-                <li class="main-header__item">
-                    <a href="/admin/add-product">Add Product</a>
-                </li>
+                <li class="main-header__item"><a class="active" href="/">Shop</a></li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
             </ul>
         </nav>
     </header>
-
-    <body>
-        <h1>404 | Page Not Found</h1>
-    </body>
+    <h1>Page Not Found!</h1>
+</body>
 
 </html>
