--- a/10-Weather-App-Express/views/help.hbs
+++ b/10-Weather-App-Express/views/help.hbs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Page</title>
+    <title>{{ pageTitle }}</title>
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/app.js"></script>
 </head>
 <body>
-    <h1>About Page</h1>
-    <img src="/images/Aditya-Hajare.jpeg" alt="Aditya Hajare Profile Pic">
+    <h1>Help Page</h1>
+    <p>{{ message }}</p>
 </body>
 </html>
