--- a/10-Weather-App-Express/views/index.hbs
+++ b/10-Weather-App-Express/views/index.hbs
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Help</title>
+    <title>{{ pageTitle }}</title>
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/app.js"></script>
 </head>
 <body>
-    <h1>Help Page</h1>
+    <h1>{{ pageTitle }}</h1>
+    <p>Created By {{ name }}</p>
 </body>
 </html>
