Weather App - ExpressJS | Basics | Handlebars - Template Partials

--- a/10-Weather-App-Express/templates/views/index.hbs
+++ b/10-Weather-App-Express/templates/views/index.hbs
@@ -9,8 +9,7 @@
     <script src="/js/app.js"></script>
 </head>
 <body>
-    <h1>{{ pageTitle }}</h1>
-    <p>Created By {{ name }}</p>
-    <img src="/images/Aditya-Hajare.jpeg" alt="Aditya Hajare Profile Pic">
+    {{>header}}
+    {{>footer}}
 </body>
 </html>
