--- a/10-Weather-App-Express/templates/views/about.hbs
+++ b/10-Weather-App-Express/templates/views/about.hbs
@@ -9,7 +9,8 @@
     <script src="/js/app.js"></script>
 </head>
 <body>
-    <h1>{{ pageTitle }}</h1>
-    <p>Created By {{ name }}</p>
+    {{>header}}
+    <img src="/images/Aditya-Hajare.jpeg" alt="Aditya Hajare Profile Pic">
+    {{>footer}}
 </body>
 </html>
