--- a/10-Weather-App-Express/templates/views/help.hbs
+++ b/10-Weather-App-Express/templates/views/help.hbs
@@ -9,7 +9,8 @@
     <script src="/js/app.js"></script>
 </head>
 <body>
-    <h1>Help Page</h1>
+    {{>header}}
     <p>{{ message }}</p>
+    {{>footer}}
 </body>
 </html>
