--- a/10-Weather-App-Express/public/css/styles.css
+++ b/10-Weather-App-Express/public/css/styles.css
@@ -1,7 +1,30 @@
-h1 {
-    color: grey;
+body {
+    color: #333;
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 650px;
+    margin: 0 auto;
+    padding: 0 16px;
 }
 
-img {
-    width: 250px;
+footer {
+    color: #888;
+    border-top: 1px solid #eee;
+    margin-top: 16px;
+    padding: 16px 0;
+}
+
+header {
+    margin-top: 16px;
+    margin-bottom: 48px;
+}
+
+h1 {
+    font-size: 64px;
+    margin-bottom: 16px;
+}
+
+header a {
+    color: #888;
+    margin-right: 16px;
+    text-decoration: none;
 }
