--- a/10-Weather-App-Express/templates/partials/header.hbs
+++ b/10-Weather-App-Express/templates/partials/header.hbs
@@ -1,6 +1,7 @@
-<h1>{{ pageTitle }}</h1>
-<div>
+<header>
+    <h1>{{ pageTitle }}</h1>
+
     <a href="/">Weather</a>
     <a href="/about">About</a>
     <a href="/help">Help</a>
-</div>
+</header>
