Weather App - ExpressJS | Basics | Styling Part 2

--- a/10-Weather-App-Express/templates/views/404.hbs
+++ b/10-Weather-App-Express/templates/views/404.hbs
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ pageTitle }}</title>
+    <title>Weather App | 404 - Page Not Found</title>
+    <link rel="icon" href="/images/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    {{>header}}
-    <p>
-        {{errorMsg}}
-    </p>
+    <div class="main-content">
+        {{>header}}
+        <p>{{ errorMsg }}</p>
+    </div>
     {{>footer}}
 </body>
 </html>
