--- a/10-Weather-App-Express/templates/views/index.hbs
+++ b/10-Weather-App-Express/templates/views/index.hbs
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ pageTitle }}</title>
+    <title>Weather App | Home</title>
+    <link rel="icon" href="/images/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/app.js"></script>
 </head>
 <body>
-    {{>header}}
+    <div class="main-content">
+        {{>header}}
+        <p>Use this site to get your weather!</p>
+    </div>
     {{>footer}}
 </body>
 </html>
