Weather App - Express | Geolocation and Weather API Integration - Client Side JS - Damn i'm drunk as hell :(

--- a/10-Weather-App-Express/templates/views/index.hbs
+++ b/10-Weather-App-Express/templates/views/index.hbs
@@ -7,13 +7,18 @@
     <title>Weather App | Home</title>
     <link rel="icon" href="/images/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
 </head>
 <body>
     <div class="main-content">
         {{>header}}
         <p>Use this site to get your weather!</p>
+
+        <form>
+            <input type="text" placeholder="Location">
+            <button>Search</button>
+        </form>
     </div>
     {{>footer}}
+    <script src="/js/app.js"></script>
 </body>
 </html>
