Weather App - Search Form

--- a/10-Weather-App-Express/public/css/styles.css
+++ b/10-Weather-App-Express/public/css/styles.css
@@ -40,3 +40,16 @@ header a {
 .portrait {
     width: 250px;
 }
+
+input {
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+
+button {
+    cursor: pointer;
+    border: 1px solid #888;
+    background: #888;
+    color: #fff;
+    padding: 10px;
+}
