--- a/10-Weather-App-Express/templates/views/index.hbs
+++ b/10-Weather-App-Express/templates/views/index.hbs
@@ -17,6 +17,8 @@
             <input type="text" placeholder="Location">
             <button>Search</button>
         </form>
+        <p id="message-1"></p>
+        <p id="message-2"></p>
     </div>
     {{>footer}}
     <script src="/js/app.js"></script>
