--- a/19-Shop-App-Session-Authentication/views/auth/login.ejs
+++ b/19-Shop-App-Session-Authentication/views/auth/login.ejs
@@ -6,6 +6,9 @@
 <body>
    <%- include('../includes/navigation.ejs') %>
     <main>
+        <% if(errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% } %>
         <form class="login-form" action="/login" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
