Shop App - Session Authentication | Signup flash messages

--- a/19-Shop-App-Session-Authentication/views/auth/signup.ejs
+++ b/19-Shop-App-Session-Authentication/views/auth/signup.ejs
@@ -7,6 +7,9 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
+        <% if(errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% } %>
         <form class="signup-form" action="/signup" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
