Shop App - Token Authentication | Signup form style

--- a/20-Shop-App-Token-Authentication/public/css/auth.css
+++ b/20-Shop-App-Token-Authentication/public/css/auth.css
@@ -4,3 +4,10 @@
     margin: auto;
     display: block;
   }
+
+.signup-form {
+  width: 20rem;
+  max-width: 90%;
+  margin: auto;
+  display: block;
+}
