--- a/20-Shop-App-Token-Authentication/views/auth/login.ejs
+++ b/20-Shop-App-Token-Authentication/views/auth/login.ejs
@@ -21,5 +21,8 @@
             </div>
             <button class="btn" type="submit">Login</button>
         </form>
+        <div class="centered">
+            <a href="/reset-password">Reset Password</a>
+        </div>
     </main>
 <%- include('../includes/end.ejs') %>
