Shop App Authentication | Reset password

--- a/20-Shop-App-Token-Authentication/public/css/main.css
+++ b/20-Shop-App-Token-Authentication/public/css/main.css
@@ -241,6 +241,12 @@ form {
   color: red;
 }
 
+.user-message--success {
+  border-color: green;
+  background: rgb(182, 248, 182);
+  color: green;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
