--- a/20-Shop-App-Token-Authentication/views/auth/new-password.ejs
+++ b/20-Shop-App-Token-Authentication/views/auth/new-password.ejs
@@ -9,16 +9,13 @@
         <% if(errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-        <% if(successMessage) { %>
-            <div class="user-message user-message--success"><%= successMessage %></div>
-        <% } %>
-        <form class="reset-password-form" action="/reset-password" method="POST">
+        <form class="login-form" action="/new-password" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
-                <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password">
             </div>
-            <button class="btn" type="submit">Reset Password</button>
+            <button class="btn" type="submit">Update Password</button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
