Shop App Authentication | New password

--- a/20-Shop-App-Token-Authentication/views/auth/new-password.ejs
+++ b/20-Shop-App-Token-Authentication/views/auth/new-password.ejs
@@ -6,11 +6,9 @@
 <body>
    <%- include('../includes/navigation.ejs') %>
     <main>
-        <% if(errorMessage) { %>
-            <div class="user-message user-message--error"><%= errorMessage %></div>
-        <% } %>
         <form class="login-form" action="/new-password" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <input type="hidden" name="userId" value="<%= userId %>">
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
