Shop App Authentication | Set new password

--- a/20-Shop-App-Token-Authentication/views/auth/new-password.ejs
+++ b/20-Shop-App-Token-Authentication/views/auth/new-password.ejs
@@ -9,6 +9,7 @@
         <form class="login-form" action="/new-password" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <input type="hidden" name="userId" value="<%= userId %>">
+            <input type="hidden" name="token" value="<%= token %>">
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
