--- a/20-Shop-App-Token-Authentication/views/auth/login.ejs
+++ b/20-Shop-App-Token-Authentication/views/auth/login.ejs
@@ -9,6 +9,9 @@
         <% if(errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
+        <% if(successMessage) { %>
+            <div class="user-message user-message--success"><%= successMessage %></div>
+        <% } %>
         <form class="login-form" action="/login" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
