Shop App Validations | Signup email validation

--- a/21-Shop-App-Token-Authentication/views/auth/signup.ejs
+++ b/21-Shop-App-Token-Authentication/views/auth/signup.ejs
@@ -10,7 +10,7 @@
         <% if(errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-        <form class="signup-form" action="/signup" method="POST">
+        <form class="signup-form" action="/signup" method="POST" novalidate>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
                 <label for="email">E-Mail</label>
