Shop App Files Upload & Download | Add file picker to frontend

--- a/23-Shop-App-Files-Upload-Download/views/admin/edit-product.ejs
+++ b/23-Shop-App-Files-Upload-Download/views/admin/edit-product.ejs
@@ -14,8 +14,9 @@
                 <input type="text" name="title" id="title" value="<% if (editing) { %><%= product.title %><% } %>">
             </div>
             <div class="form-control">
-                <label for="imageUrl">Image URL</label>
-                <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) { %><%= product.imageUrl %><% } %>">
+                <label for="image">Image URL</label>
+                <!-- <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) { %><%= product.imageUrl %><% } %>"> -->
+                <input type="file" name="image" id="image" %>">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
