Shop App Files Upload & Download | PDFKit to generate invoice pdfs

--- a/23-Shop-App-Files-Upload-Download/views/shop/orders.ejs
+++ b/23-Shop-App-Files-Upload-Download/views/shop/orders.ejs
@@ -14,7 +14,7 @@
                             <h1>Order - # <%= order._id %></h1>
                             <ul class="orders__products">
                                 <% order.products.forEach(product => { %>
-                                    <li class="orders__products-item"><%= product.product.title %> (<%= product.quantity %>) - <a href="<%= order._id %>">Invoice</a></li>
+                                    <li class="orders__products-item"><%= product.product.title %> (<%= product.quantity %>) - <a href="/orders/<%= order._id %>">Invoice</a></li>
                                 <% }); %>
                             </ul>
                         </li>
