--- a/23-Shop-App-Files-Upload-Download/views/shop/orders.ejs
+++ b/23-Shop-App-Files-Upload-Download/views/shop/orders.ejs
@@ -11,10 +11,10 @@
                 <ul class="orders">
                     <% orders.forEach(order => { %>
                         <li class="orders__item">
-                            <h1>Order - # <%= order._id %></h1>
+                            <h1>Order - # <%= order._id %> - <a href="/orders/<%= order._id %>">Invoice</a></h1>
                             <ul class="orders__products">
                                 <% order.products.forEach(product => { %>
-                                    <li class="orders__products-item"><%= product.product.title %> (<%= product.quantity %>) - <a href="/orders/<%= order._id %>">Invoice</a></li>
+                                    <li class="orders__products-item"><%= product.product.title %> (<%= product.quantity %>)</li>
                                 <% }); %>
                             </ul>
                         </li>
