Shop App Pagination | Pagination - Index and Products pages

--- a/24-Shop-App-Pagination/views/shop/index.ejs
+++ b/24-Shop-App-Pagination/views/shop/index.ejs
@@ -30,10 +30,7 @@
                     </article>
                 <% } %>
             </div>
-            <section class="pagination">
-                <a href="/?page=1">1</a>
-                <a href="/?page=2">2</a>
-            </section>
+            <%- include('../includes/pagination.ejs', { currentPage, hasPreviousPage, previousPage, hasNextPage, nextPage, lastPage }) %>
         <% } else { %>
             <h1>No Products Found!</h1>
         <% } %>
