--- a/25-Shop-App-Payments/views/shop/cart.ejs
+++ b/25-Shop-App-Payments/views/shop/cart.ejs
@@ -21,10 +21,11 @@
                 </ul>
                 <hr>
                 <div class="centered">
-                    <form action="/create-order" method="post">
+                    <!-- <form action="/create-order" method="post">
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <button type="submit" class="btn">Order Now!</button>
-                    </form>
+                    </form> -->
+                    <a href="/checkout">Order Now</a>
                 </div>
             <% } else { %>
                 <h1>No Products in Cart!</h1>
